# Search-Engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ConverterJSON.cpp  InvertedIndex.cpp  InvertedIndex.h  Makefile  README.md  SearchServer.cpp  SearchServer.h  cmake_install.cmake  config.json  file_search_engine.cbp  file_search_engine[1]_include.cmake  file_search_engine[1]_tests.cmake  file_search_engine_tests[1]_include.cmake  file_search_engine_tests[1]_tests.cmake  main.cpp  requests.json
.cmake/api/v1/reply/: cache-v2-014aae621b4a4e068d05.json  cmakeFiles-v1-e3b1078cc3dabee057c8.json  codemodel-v2-7abdbb4098356712489b.json  directory-_deps.googletest-build.googlemock-Debug-6adf6b4d859f1407fc08.json  directory-_deps.googletest-build.googletest-Debug-496144b063195d4d3bd2.json  index-2024-05-29T13-08-50-0075.json  target-file_search_engine-Debug-3dc47fe6b667fee0e101.json  target-file_search_engine_tests-Debug-6def3a4a5bd042797761.json  target-gmock-Debug-6ab5d43e35f3c722c7d8.json  target-gmock_main-Debug-02940c9aac97245408f4.json  target-gtest-Debug-90d3a2555fd66217546b.json  target-gtest_main-Debug-3168644e9992469f9733.json  target-nlohmann_json-Debug-c9e3ee81b71ca454ec8f.json
Testing/Temporary/: CTestCostData.txt
config/: answers.json  config.json  requests.json
include/: ConverterJSON.h  SearchServer.h
nlohmann.json/: CMakeLists.txt  Makefile  nlohmann_json.cbp
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  inverted_index_tests.cpp  main.cpp  search_server_tests.cpp
